syntax = "proto3";

package helloworld;

option go_package = "./helloworld/;helloworldpb";

service Greeter {
  // SayHello says hello.
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
